--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,13 @@ html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
+a:link{
+    text-decoration: none;
+}
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+}
 
 /* Sections
    ========================================================================== */
